--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>This is my test website hosted on GitHub Pages.</p>
+    <p>venkan gouda</p>
 </body>
 </html>
